VMSS/azuredeploy.parameters.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "value": "canadacentral"
    },
    "osDiskType": {
      "value": "StandardSSD_LRS"
    },
    "addressPrefixes": {
      "value": [
        "10.0.0.0/16"
      ]
    },
    "subnets": {
      "value": [
        {
          "name": "default",
          "properties": {
            "addressPrefix": "10.0.0.0/20"
          }
        }
      ]
    },
    "virtualNetworkId": {
      "value": "/subscriptions/0673c009-6d00-4254-9178-35fed48c87be/resourceGroups/vmsscire/providers/Microsoft.Network/virtualNetworks/vmsscire-vnet"
    },
    "virtualNetworkName": {
      "value": "vmsscire-vnet"
    },
    "networkSecurityGroups": {
      "value": [
        {
          "name": "basicNsgvmsscire-vnet-nic01",
          "id": "/subscriptions/0673c009-6d00-4254-9178-35fed48c87be/resourceGroups/vmsscire/providers/Microsoft.Network/networkSecurityGroups/basicNsgvmsscire-vnet-nic01",
          "rules": [
            {
              "name": "HTTP",
              "properties": {
                "priority": 300,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "80"
              }
            },
            {
              "name": "SSH",
              "properties": {
                "priority": 320,
                "protocol": "TCP",
                "access": "Allow",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22"
              }
            }
          ]
        }
      ]
    },
    "networkInterfaceConfigurations": {
      "value": [
        {
          "name": "vmsscire-vnet-nic01",
          "primary": true,
          "subnetId": "/subscriptions/0673c009-6d00-4254-9178-35fed48c87be/resourceGroups/vmsscire/providers/Microsoft.Network/virtualNetworks/vmsscire-vnet/subnets/default",
          "applicationGatewayBackendAddressPools": [],
          "loadBalancerBackendAddressPools": [
            {
              "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('loadBalancerName'), parameters('backendPoolName'))]"
            }
          ],
          "applicationSecurityGroups": [],
          "loadBalancerInboundNatPools": [],
          "enableAcceleratedNetworking": false,
          "nsgName": "basicNsgvmsscire-vnet-nic01",
          "nsgId": "/subscriptions/0673c009-6d00-4254-9178-35fed48c87be/resourceGroups/vmsscire/providers/Microsoft.Network/networkSecurityGroups/basicNsgvmsscire-vnet-nic01",
          "pipName": "publicIp-vmsscire-vnet-nic01"
        }
      ]
    },
    "backendPoolName": {
      "value": "bepool"
    },
    "loadBalancerName": {
      "value": "loadbalancer"
    },
    "loadbalancingRuleFrontEndPort": {
      "value": 80
    },
    "loadbalancingRuleBackendEndPort": {
      "value": 80
    },
    "loadbalancingRuleProtocol": {
      "value": "Tcp"
    },
    "InboundNATRuleFrontEndPortRangeStart": {
      "value": 50000
    },
    "vmName": {
      "value": "vmss"
    },
    "virtualMachineScaleSetName": {
      "value": "vmss"
    },
    "instanceCount": {
      "value": "2"
    },
    "instanceSize": {
      "value": "Standard_D2s_v3"
    },
    "zone": {
      "value": [
        "1",
        "2"
      ]
    },
    "zoneBalance": {
      "value": "false"
    },
    "platformFaultDomainCount": {
      "value": "1"
    },
    "scaleInPolicy": {
      "value": {
        "rules": [
          "Default"
        ],
        "forceDeletion": false
      }
    },
    "upgradePolicy": {
      "value": "Manual"
    },
    "hibernationEnabled": {
      "value": false
    },
    "adminUsername": {
      "value": "azureuser"
    },
    "adminPassword": {
      "value": null
    },
    "customData": {
      "value": null
    },
    "securityType": {
      "value": "TrustedLaunch"
    },
    "secureBoot": {
      "value": true
    },
    "vTPM": {
      "value": true
    },
    "healthExtensionProtocol": {
      "value": "http"
    },
    "healthExtensionPort": {
      "value": 80
    },
    "healthExtensionRequestPath": {
      "value": "/"
    },
    "autoRepairsPolicyEnabled": {
      "value": false
    },
    "gracePeriod": {
      "value": "PT10M"
    },
    "autoRepairsAction": {
      "value": "Replace"
    }
  }
}
